--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@ body {
     background-color: #101010;
     font-weight: 400;
     color: white;
-    
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
 
 }
 header nav {
@@ -61,6 +64,7 @@ button {
     background-color: transparent;
     outline: none;
     border: none;
+    
 }
 ::placeholder {
 
@@ -69,7 +73,9 @@ button {
 main {
     display: flex;
     gap: 30px;
+    flex-grow: 1;
 }
+
 
 h2 {
     font-size: 16px;
