--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
     color: white;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
+    /* height: 100vh;
+    overflow: hidden; con esto podemos hacer que la pantalla no tenga scr*/
 
 }
 header nav {
@@ -21,7 +21,7 @@ header nav {
     align-items: center;
     justify-content: space-between; 
     padding: 10px 60px;
-    font-size: 32px;
+    font-size: 28px;
 }
 
 .navbar__logo {
@@ -41,19 +41,56 @@ header nav {
 
 
 .navbar__busqueda {
+    border-radius: 100px;
+    width: 354px;
+    height: 84px;
+    position: relative;
+    overflow: hidden;
     display: flex;
-    background-color: #232222 ;
     align-items: center;
     justify-content: center;
     padding: 15px;
-    border-radius: 100px;    
-    max-width: fit-content;
 }
+/* animacion */
+.navbar__busqueda::before {
+    content: "";
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: conic-gradient(#0D0540, #9D21BF, #72118C, #8C0F54, #0D0540);
+    animation: rotacion 5s linear infinite;
+}
+/* efecto de la animacion */
+@keyframes rotacion {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.navbar__busqueda span {
+    position: absolute;
+    background-color: #232222 ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 350px;
+    height: 80px;
+    border-radius: 100px;
+    padding: 15px;
+}
+
+ .navbar__busqueda::after {
+    background-color: #232222;
+
+ }
+
 .navbar__busqueda input {
     background-color: transparent;
-    min-height: max-content;
-    min-width: fit-content;
-    font-size: 24px;
+    width: 100%;
+    height: 25px;
+    font-size: 20px;
     padding: 5px;
     outline: none;
     border: none;
@@ -87,32 +124,128 @@ h2 {
     gap: 20px;
 }
 
-.main__section__derecha__menu, .main__section__derecha__setting {
+.main__section__derecha__menu {
     display: flex;
     flex-direction: column;
     gap: 25px;
-    background-color: #232222;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
-    border: 3px solid white;
+    padding: 30px 60px;
+    height: 384px;
+    width: 194px;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+/* animacion */
+.main__section__derecha__menu::before {
+    content: "";
+    position: absolute;
+    width: 450px;
+    height: 450px;
+    background: conic-gradient(#0D0540, #9D21BF, #72118C, #8C0F54,  #0D0540);
+    animation: rotacion 5s linear infinite;
+}
+
+
+.main__section__derecha__menu span {
+    position: absolute;
+    background-color: #232222;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 190px;
+    height: 380px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    padding: 30px 60px;
+    
+}
+ 
+.main__section__derecha__setting {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    padding: 30px 60px;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    width: 194px;
+    height: 269px;
+    overflow: hidden;
+}
+
+/* animacion */
+.main__section__derecha__setting::before {
+    content: "";
+    position: absolute;
+    width: 350px;
+    height: 350px;
+    background: conic-gradient(#0D0540, #9D21BF, #72118C, #8C0F54,  #0D0540);
+    animation: rotacion 5s linear infinite;
+}
+
+
+.main__section__derecha__setting span{
+    background-color: #232222;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 265px;
+    width: 190px;
+    position: absolute;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
     padding: 30px 60px;
 }
 
-.main__section__derecha,.main__section__izquierda div,section img {
-    min-height: 40px;
-    min-width: 40px;
+
+.main__section__derecha__menu span img, .main__section__derecha__setting span img, section span img {
+    min-height: 30px;
+    min-width: 30px;
 }
 
 .main__section__Centro { 
     /* preguntar */
     display: flex;
-    flex-grow: 1;/* para que el contenedor se ajuste a la pantalla */
+    flex-grow: 1;
+    /* para que el contenedor se ajuste a la pantalla */
+    flex-direction: column;
+    height: 673px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    position: relative;
+    overflow: hidden;
+
+
+}
+/* animacion */
+.main__section__Centro::before {
+    content: "";
+    position: absolute;
+    height: 200vh;
+    width: 200vh;
+    background: conic-gradient(#0D0540, #9D21BF, #72118C, #8C0F54,  #0D0540);
+    animation: rotacion 5s linear infinite;
+}
+.main__section__Centro span{
+    display: flex;
+    flex-grow: 1;
+    width: 99.5%;
     flex-direction: column;
     justify-content: space-between;
-    align-content: space-between;
     padding: 30px 60px;
-    background-color: #232222;
     border-radius: 25px;
+    height: 669px;
+    background-color: #232222;
+    position: absolute;
+
 
 }
 
@@ -146,17 +279,39 @@ h2 {
 
 .main__section__izquierda {
     display: flex;
-    flex-direction: column;
-    justify-content: start;
+    justify-content: center;
+    align-items: center;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
+    height: 673px;
+    width: 194px;
+    position: relative;
+    overflow: hidden;
+}
+.main__section__izquierda::before {
+    content: "";
+    position: absolute; 
+    height:700px;
+    width: 700px;
+    background: conic-gradient(#0D0540, #9D21BF, #72118C, #8C0F54,  #0D0540);
+    animation: rotacion 5s linear infinite;
+    
+}
+.main__section__izquierda span {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    height: 669px;
+    width: 190px;
+    gap: 30px;
     padding: 30px 60px;
     background-color: #232222;
-    gap: 30px;
+    border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px;
 }
 
 footer {
-    padding-top: 30px;
+    padding-top: 10px;
 }
 footer p {
     display: flex;
