--- a/style.css
+++ b/style.css
@@ -119,6 +119,10 @@ button {
     border: none;
     cursor: pointer;
 }
+
+button:hover {
+    
+}
 ::placeholder {
 
     color: white;
@@ -441,8 +445,10 @@ footer::before {
 
 }
 
-img:nth-child(1) {
+#portada {
     border-radius: 25px;
+    height: 80px;
+    width: 80px;
 }
 
 .footer__izquierda {
@@ -455,3 +461,4 @@ img:nth-child(1) {
     display: flex;
     justify-content: space-between;
 }
+
